# lalala_music_player

./: CMakeLists.txt  LeftPanel.qml  LeftPanelModel.qml  Main.qml  README.md  SongsView.qml  audioinfo.cpp  audioinfo.h  main.cpp  playercontroller.cpp  playercontroller.h
QML/: Main.qml
QML/Models/: LeftPanelModel.qml
QML/Panels/: LeftPanel.qml  MenuOverlay.qml
QML/Views/: SongsView.qml
